@@ -1,0 +1,69 @@
+/**
+ * Licensed under the GNU LESSER GENERAL PUBLIC LICENSE, version 2.1, dated February 1999.
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the latest version of the GNU Lesser General
+ * Public License as published by the Free Software Foundation;
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public License
+ * along with this program (LICENSE.txt); if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+ */
+package org.jamwiki.servlets;
+
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+import org.jamwiki.utils.WikiLogger;
+import org.jamwiki.WikiBase;
+import org.jamwiki.WikiMessage;
+import org.jamwiki.parser.ParserInput;
+import org.jamwiki.parser.ParserDocument;
+import org.jamwiki.utils.Utilities;
+import org.springframework.web.servlet.ModelAndView;
+
+/**
+ *
+ */
+public class SpecialPagesServlet extends JAMWikiServlet {
+
+	/** Logger for this class and subclasses. */
+	private static WikiLogger logger = WikiLogger.getLogger(SpecialPagesServlet.class.getName());
+
+	/**
+	 * This method handles the request after its parent class receives control. It gets the topic's name and the
+	 * virtual wiki name from the uri, loads the topic and returns a view to the end user.
+	 *
+	 * @param request - Standard HttpServletRequest object.
+	 * @param response - Standard HttpServletResponse object.
+	 * @return A <code>ModelAndView</code> object to be handled by the rest of the Spring framework.
+	 */
+	protected ModelAndView handleJAMWikiRequest(HttpServletRequest request, HttpServletResponse response, ModelAndView next, WikiPageInfo pageInfo) throws Exception {
+		specialPages(request, next, pageInfo);
+		return next;
+	}
+
+	/**
+	 *
+	 */
+	private void specialPages(HttpServletRequest request, ModelAndView next, WikiPageInfo pageInfo) throws Exception {
+		String virtualWiki = Utilities.getVirtualWikiFromURI(request);
+		String contents = Utilities.readSpecialPage(request.getLocale(), WikiBase.SPECIAL_PAGE_SPECIAL_PAGES);
+		ParserInput parserInput = new ParserInput();
+		parserInput.setContext(request.getContextPath());
+		parserInput.setLocale(request.getLocale());
+		parserInput.setAllowSectionEdit(false);
+		// FIXME - hard coding
+		parserInput.setTopicName("Special:Specialpages");
+		parserInput.setVirtualWiki(virtualWiki);
+		ParserDocument parserDocument = Utilities.parse(parserInput, contents);
+		next.addObject("pageContent", parserDocument.getContent());
+		pageInfo.setPageTitle(new WikiMessage("specialpages.title"));
+		pageInfo.setAction(WikiPageInfo.ACTION_SPECIAL_PAGES);
+		pageInfo.setSpecial(true);
+	}
+}
