@@ -245,6 +245,7 @@ setup.caption.adminlogin=Adminisztr\u00E1tor bel\u00E9p\u00E9se
 setup.error.notrequired=A rendszer telep\u00EDt\u00E9se m\u00E1r majdnem k\u00E9sz.  N\u00E9zd meg az adminisztr\u00E1tor oldalt a be\u00E1ll\u00EDt\u00E1sok megv\u00E1ltoztat\u00E1s\u00E1hoz.
 setup.error.upgrade=\u00DAj telep\u00EDt\u00E9s van folyamatban, de egy JAMWiki adatb\u00E1zis m\u00E1r l\u00E9tezik.  Ha kor\u00E1bban m\u00E1r telep\u00EDtve volt, haszn\u00E1ld a friss\u00EDt\u00E9s funkci\u00F3t. Err\u0151l b\u0151vebb le\u00EDr\u00E1st az UPGRADE.txt dokumentumban tal\u00E1lasz.  Ha folytatod a telep\u00EDt\u00E9st, a l\u00E9tez\u0151 \u00E9s a telep\u00EDtend\u0151 adatb\u00E1zis nem illhet \u00F6ssze, ez hib\u00E1khoz vezethet.  Csak akkor kattints a lenti folytat\u00E1s gombra, ha v\u00E9gre szeretn\u00E9d hajtani az \u00FAj v\u00E1ltozat telep\u00EDt\u00E9s\u00E9t.
 setup.title=Telep\u00EDt\u00E9s
+specialpages.title=Special pages
 topic.categories=Kateg\u00F3ri\u00E1k
 topic.category.images=K\u00E9pek a(z) &quot;{0}&quot; kateg\u00F3ri\u00E1ban
 topic.category.numimages={0} k\u00E9p tal\u00E1lhat\u00F3 a(z) &quot;{1}&quot; kateg\u00F3ri\u00E1ban
