@@ -245,6 +245,7 @@ setup.caption.adminlogin=Admin user login
 setup.error.notrequired=System setup is already complete.  View the admin page to change settings.
 setup.error.upgrade=A new installation is being performed, but a JAMWiki database already exists.  If JAMWiki was previously installed, please use the upgrade process described in the UPGRADE.txt document.  If you continue with a new installation the existing database schema may not match the current JAMWiki version and errors will occur.  Press the continue button below only if you wish to continue with the new install.
 setup.title=Setup
+specialpages.title=Special pages
 topic.categories=Categories
 topic.category.images=Images in category &quot;{0}&quot;
 topic.category.numimages=There are {0} images in category &quot;{1}&quot;
