@@ -25,6 +25,7 @@
 				<prop key="/**/Special:RecentChanges">RecentChanges</prop>
 				<prop key="/**/Special:Search">Search</prop>
 				<prop key="/**/Special:Setup">Setup</prop>
+				<prop key="/**/Special:Specialpages">SpecialPages</prop>
 				<prop key="/**/Special:TopicsAdmin">TopicsAdmin</prop>
 				<prop key="/**/Special:Translation">Translation</prop>
 				<prop key="/**/Special:Upgrade">Upgrade</prop>
@@ -55,6 +56,7 @@
 	<bean id="Register" class="org.jamwiki.servlets.RegisterServlet" />
 	<bean id="Search" class="org.jamwiki.servlets.SearchServlet" />
 	<bean id="Setup" class="org.jamwiki.servlets.SetupServlet" />
+	<bean id="SpecialPages" class="org.jamwiki.servlets.SpecialPagesServlet" />
 	<bean id="Stylesheet" class="org.jamwiki.servlets.StylesheetServlet" />
 	<bean id="Topic" class="org.jamwiki.servlets.TopicServlet" />
 	<bean id="TopicsAdmin" class="org.jamwiki.servlets.TopicsAdminServlet" />
